Add posts route

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -36,6 +36,6 @@
   </div>
   <% end %>
   <div class="text-center">
-  <%= link_to "See All Posts", user_posts_path(@user), class: "btn btn-primary" %>
+  <%= link_to "See All Posts", user_posts_path(@user), class: "btn btn-primary mb-3" %>
   </div>
 </div>
