--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,7 +8,7 @@
                       <img src="<%= @user.photo %>" alt="<%= @user.name %>" class="profile-photo-lg">
                     </div>
                   <div class="col-md-7 col-sm-7">
-                    <h5 class="mt-2"><a href="#" class="profile-link fs-3"><%= @user.name %></a></h5>
+                    <h5 class="mt-2"><%= @user.name %></h5>
                   </div>
                   <div class="col-md-3 col-sm-3">
                     <p class="text-muted mt-5">Number of posts <%= @user.post_counter %></p>
