--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,7 +25,7 @@
       </div>
     </div>
     <% @posts.each_with_index do |post, index| %>
-    <div class="card mb-4" style="width: 100%;">
+    <div class="card mb-4" id="post-card" style="width: 100%;">
     <div class="card-body">
       <h5 class="card-title">Post <%= index +1 %></h5>
       <p class="card-text"><%= post.text %></p>
