--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,9 @@
     <div class="row">
         <div class="col-md-8">
             <div class="people-nearby">
+            <div class="d-flex justify-content-end">
+              <%= button_to 'Sign Out', destroy_user_session_path, method: :delete, data: { confirm: 'Are you sure you want to sign out?' }, class: "btn btn-primary mb-3" %>
+            </div>
             <% @users.each do |user| %>
                 <div class="nearby-user">
                   <div class="row">
