--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,6 +16,11 @@
     <div class="card-body">
       <p class="card-text"><%= comment.user.name %>: <%= comment.text %></p>
     </div>
+
+  <% if can? :destroy, comment %>
+      <%= button_to 'DELETE Comment', user_post_comment_path(@user, @post, comment), method: :delete %>
+  <% end %>
+
     <% end %> 
   </div>
 </div>
