Add delete post button

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,10 +17,13 @@
       <p class="card-text"><%= comment.user.name %>: <%= comment.text %></p>
     </div>
 
-  <% if can? :destroy, comment %>
-      <%= button_to 'DELETE Comment', user_post_comment_path(@user, @post, comment), method: :delete %>
-  <% end %>
+    <% if can? :destroy, comment %>
+        <%= button_to 'DELETE Comment', user_post_comment_path(@user, @post, comment), method: :delete %>
+    <% end %>
 
-    <% end %> 
+    <% if can? :destroy,  @post %>
+      <%= button_to 'DELETE Post', user_post_path(@user, @post), method: :delete %>
+    <% end %>
+  <% end %> 
   </div>
 </div>
